new structure and +auth